--- a/thing.html
+++ b/thing.html
@@ -45,7 +45,7 @@ var ajaxstart = new Date().getTime();
 // http://erddap.secoora.org/erddap/tabledap/cmsdock.json?time%2Cwind_speed_of_gust&time%3E=2023-07-04T18%3A45%3A00Z
         
 $.ajax({
-  url: 'http://erddap.secoora.org/erddap/tabledap/org_cormp_sun2.json?time%2Csea_water_practical_salinity',
+  url: 'https://erddap.secoora.org/erddap/tabledap/org_cormp_sun2.json?time%2Csea_water_practical_salinity',
   dataType: 'jsonp',
   jsonp: '.jsonp',
   cache: 'true',
